src/objects/TR1__TextKernel__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TR1__API_Host__c</fullName>
        <label>API Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Add_Candidate_Endpoint__c</fullName>
        <label>Add Candidate Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Access_Roles__c</fullName>
        <label>Candidate Access Roles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Environment__c</fullName>
        <label>Candidate Environment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Custom_CSS_Path__c</fullName>
        <description>URL/Path to a Custom CSS file used to design the Search! UI Screen of TextKernel.</description>
        <inlineHelpText>URL/Path to a Custom CSS file used to design the Search! UI Screen of TextKernel.</inlineHelpText>
        <label>Custom CSS Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Delete_Candidate_Endpoint__c</fullName>
        <label>Delete Candidate Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Access_Roles__c</fullName>
        <label>Job Access Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Environment__c</fullName>
        <label>Job Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Request_Token_Endpoint__c</fullName>
        <label>Request Token Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Search_Match_Endpoint__c</fullName>
        <label>Search! Match Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Search_UI_Host__c</fullName>
        <label>Search! UI Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Search_UI_URL__c</fullName>
        <label>Search! UI URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Update_Candidate_Endpoint__c</fullName>
        <label>Update Candidate Endpoint</label>
        <type>TextArea</type>
    </fields>
    <label>TextKernel</label>
</CustomObject>